templates/pock-helm-chart_template.yaml
---
# Source: pock-helm-chart/charts/nginx-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-nginx-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: release-name-nginx-ingress
    helm.sh/chart: nginx-ingress-0.9.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app:  release-name-nginx-ingress
---
# Source: pock-helm-chart/templates/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: frontend
---
# Source: pock-helm-chart/templates/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: backend
---
# Source: pock-helm-chart/charts/nginx-ingress/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-nginx-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: release-name-nginx-ingress
    helm.sh/chart: nginx-ingress-0.9.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-nginx-ingress
  template:
    metadata:
      labels:
        app: release-name-nginx-ingress
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      serviceAccountName: release-name-nginx-ingress
      hostNetwork: false
      containers:
      - image: "nginx/nginx-ingress:1.11.1"
        name: release-name-nginx-ingress
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443

        - name: prometheus
          containerPort: 9113
        - name: readiness-port
          containerPort: 8081
        readinessProbe:
          httpGet:
            path: /nginx-ready
            port: readiness-port
          periodSeconds: 1
        resources:
          {}
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 101 #nginx
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
          - -nginx-plus=false
          - -nginx-reload-timeout=0
          - -enable-app-protect=false
          - -nginx-configmaps=$(POD_NAMESPACE)/release-name-nginx-ingress
          - -default-server-tls-secret=$(POD_NAMESPACE)/release-name-nginx-ingress-default-server-tls
          - -ingress-class=nginx
          - -health-status=false
          - -health-status-uri=/nginx-health
          - -nginx-debug=false
          - -v=1
          - -nginx-status=true
          - -nginx-status-port=8080
          - -nginx-status-allow-cidrs=127.0.0.1
          - -report-ingress-status
          - -external-service=release-name-nginx-ingress
          - -enable-leader-election=true
          - -leader-election-lock-name=release-name-nginx-ingress-leader-election
          - -enable-prometheus-metrics=true
          - -prometheus-metrics-listen-port=9113
          - -enable-custom-resources=true
          - -enable-tls-passthrough=false
          - -enable-snippets=false
          - -enable-preview-policies=false
          - -ready-status=true
          - -ready-status-port=8081
          - -enable-latency-metrics=false
---
# Source: pock-helm-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-image
          image: denisshav/frontend:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "50m"
---
# Source: pock-helm-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-image
          image: denisshav/backend:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "50m"
---
# Source: pock-helm-chart/charts/nginx-ingress/templates/controller-ingress-class.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: nginx.org/ingress-controller
---
# Source: pock-helm-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: 35.228.193.35.nip.io
      http:
        paths:
        - path: /api
          backend:
            serviceName: backend-service
            servicePort: 8080
        - path: /
          backend:
            serviceName: frontend-service
            servicePort: 80
